--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,32 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>General Structure</title>
     <link href="base.css" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body class="works_on_smartphone">
     <header>
         <ul>
-            <a href="tweets.html">Welcome</a>
-       
             <li>
-                <a href="tweets.html"></a>Heqader2</li>
-        
-        </ul>   
-       </header>
-       <main>
-           <article>
-            <h2>Article1</h2>
-           </article>
-           <aside>
-            <h2>Aside1</h2>
-           </aside>
-       </main>
-       <footer>
-        <h2>Footer</h2>
-           <p>Made by Clever - <a href="https://learn.shayhowe.com/html-css/" target="_blank">here</a></p>
-       </footer>
+                <a href="https://github.com/Gasorekibo">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQy4QTCNkgInW-cPl38YkXc6qgCwa4cIejwxI1SxCirhg&s" width="45" alt="ALU logo" ></a>
+            </li>
+            <li>
+                <a href="tweets.html">Tweet</a>
+            </li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p>Welcome to my first website</p>
+            <p>This is the first paragraph of my page</p>
+            <p>This is the second paragraph of my page</p>
+            <p>This is the third paragraph of my page</p>
+            <h1>This is heading one</h1>
+            <h2>This is heading two</h2>
+            <h3>This is heading three</h3>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
+    <footer>
+        <p>Made by MUGWANEZA Gasore - <a href="https://github.com/Gasorekibo" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
