--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,35 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>General Structure</title>
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="tweets.html"></a></li>
-       
             <li>
-                <a href="tweets.html"></a></li>
-        
-        </ul>   
-       </header>
-       <main>
-           <article>
-            <h2>Article</h2>
-           </article>
-           <aside></aside>
-       </main>
-       <footer>
-           <p>Made by Clever - <a href="https://learn.shayhowe.com/html-css/" target="_blank">here</a></p>
-       </footer>
-    <p>paragrap 1</p>
-    <p>paragrap 2</p>
-    <p>paragrap 3</p>
-    <p>paragrap 4</p>
-    <h1>Html basics</h1>
-    <h2>Html basics</h2>
-    <h3>Html basics</h3>
-   <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML"><img src="https://www.holbertonschool.com/holberton-logo.png" alt="image"/></a> 
-   <a href="tweets.html"></a>
+                <a href="https://github.com/Gasorekibo">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQy4QTCNkgInW-cPl38YkXc6qgCwa4cIejwxI1SxCirhg&s" width="45" alt="ALU logo" ></a>
+            </li>
+            <li>
+                <a href="tweets.html">Tweet</a>
+            </li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p>Welcome to my first website</p>
+            <p>This is the first paragraph of my page</p>
+            <p>This is the second paragraph of my page</p>
+            <p>This is the third paragraph of my page</p>
+            <h1>This is heading one</h1>
+            <h2>This is heading two</h2>
+            <h3>This is heading three</h3>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by MUGWANEZA Gasore - <a href="https://github.com/Gasorekibo" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
